# placeframe

./: .csharpierignore  .dockerignore  .env  .env copy  .env.sample  .gitignore  Directory.build.props  PyOpenGL-3.1.9-cp313-cp313-win_amd64.whl  PyOpenGL_accelerate-3.1.9-cp313-cp313-win_amd64.whl  README.md  ToDo.md  compose.bake.yml  compose.cuda.yml  compose.rocm.yml  compose.yml  docker-compose.yml  images-lock.json  images.json  main.py  openapi-projects.json  pg_format.conf  plerion.code-workspace  postgrestools.jsonc  pyproject.toml  pyrightconfig.json
.github/: CODEOWNERS
.github/actions/build-and-push-image/: action.yml
.github/workflows/: build-and-lock.yml  build.yml  create-deploy-pr.yml  create-deployment-pr.yml  db-migrations.yml  deploy.yml
api/: Dockerfile  Dockerfile.lambda  pyproject.toml
api/plerion_api/: app.py
api/plerion_api/db/: tool.py
api/plerion_api/routers/: captures.py
api/src/: main.py  settings.py
api/src/db/: app.py  conf.py  piccolo_shims.py  piccolo_stub_engine.py  tool.py
capture-app/zed/: install.py  pyproject.toml
client/Outernet.Server/: Outernet.Server.csproj
client/Outernet.Shared/: Outernet.Shared.csproj
common/: pyproject.toml
database/: 21_reconstructions.sql  42_nodes.sql
deploy/: image-lock.json
docker/api/: Dockerfile  entrypoint.sh  openapi.json  pylock.toml  pyproject.toml
docker/auth-initializer/: Dockerfile  pylock.toml
docker/cloudbeaver-initializer/: Dockerfile
docker/database-manager/: pylock.toml
docker/database-migrator/: Dockerfile
docker/gateway/: Dockerfile  entrypoint.sh
docker/localizer/: pylock.neural-networks-cpu.toml  pylock.neural-networks-cuda.toml  pylock.neural-networks-rocm.toml  pylock.toml  pylock.torch-cpu.toml  pylock.torch-cuda.toml  pylock.torch-rocm.toml  pyproject.toml
docker/orchestrator/: pylock.toml
docker/reconstructor/: pylock.neural-networks-cpu.toml  pylock.neural-networks-cuda.toml  pylock.neural-networks-rocm.toml  pylock.toml  pylock.torch-cpu.toml  pylock.torch-cuda.toml  pylock.torch-rocm.toml  pyproject.toml
docker/state-sync/: Dockerfile
infra/: Pulumi.core.yaml  Pulumi.dev.yaml  Pulumi.yaml  aws_costs.py  aws_topology.py  costs_data.json  image-lock.json  pyproject.toml  scratch.txt  vpc_costs_data.json
infra/src/: __main__.py  util.py  utils.py
infrastructure/: Pulumi.core.yaml  Pulumi.yaml  pyproject.toml
legacy/Outernet.Shared/: Outernet.Shared.Unity.asmdef  Outernet.Shared.csproj
scripts/: pyproject.toml  test.py
scripts/openapi-generator/: README.md
scripts/src/: build.py  build_push_lock.py  forward_unity_android_debug_port.py  list_debug_targets.py  sync_python_projects.py
services/: .env  docker-compose.yml  images.json
services/api/: Dockerfile  entrypoint.sh  piccolo_conf.py  pyproject.toml
services/automigrate/: Dockerfile  entrypoint.sh
services/automigrator/: Dockerfile  entrypoint.sh
services/cloudbeaver-init/: Dockerfile  entrypoint.sh
services/database-manager/: Dockerfile  pyproject.toml
services/features-worker/: Dockerfile  entrypoint.sh  pyproject.toml  settings.py
services/github-runner/: Dockerfile  entrypoint.sh
services/keycloak-reverse-proxy/: entrypoint.sh
services/oauth2-reverse-proxy/: entrypoint.sh
services/reconstruction-worker/: Dockerfile  entrypoint.sh  main.py  pyproject.toml  settings.py
services/tailscale-beacon/: Dockerfile  entrypoint.sh
tasks/create-database/: Dockerfile  entrypoint.sh  pyproject.toml
tasks/create-database/src/: main.py  settings.py
tasks/create-database/src/create_database/: main.py  settings.py
tasks/delete-database/: Dockerfile  entrypoint.sh  pyproject.toml
tasks/extract-match-features/: pyproject.toml
tasks/initialize-cloudbeaver/: entrypoint.sh
tasks/run-reconstruction/: pyproject.toml
test/: pyproject.toml
test/src/plerion_test/: auth.py  main.py  visualize.py  vls_test_result.html
zed/: Dockerfile  compose.yml
(+596 files in other folders)
