[project]
name = "placeframe"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = []


[dependency-groups]
dev = ["scripts", "deptry>=0.24.0", "ruff>=0.14.11"]

[tool.uv.workspace]
members = [

    "docker/database-manager",
    "docker/api",
    "docker/auth-initializer",
    "docker/localizer",
    "docker/orchestrator",
    "docker/reconstructor",
    "infrastructure",
    "packages/python/core",
    "packages/python/common",
    "packages/python/neural-networks",
    "packages/python/neural-networks/third-party/deep-image-retrieval",
    "packages/generated/python/datamodels",
    "packages/generated/python/api-client",
    "packages/generated/python/localizer-client",
    "scripts",
    "zed",
    # "test",
]


[tool.uv]
config-settings-package.placeframe-api-client = { editable_mode = "compat" }
config-settings-package.placeframe-localizer-client = { editable_mode = "compat" }

[tool.uv.sources]
common = { workspace = true }
core = { workspace = true }
neural-networks = { workspace = true }
datamodels = { workspace = true }
placeframe-localizer-client = { workspace = true }
placeframe_api_client = { workspace = true }
dirtorch = { workspace = true }
scripts = { workspace = true }
lightglue = { git = "https://github.com/cvg/LightGlue.git" }
pybind11-stubgen = { git = "https://github.com/sarlinpe/pybind11-stubgen", rev = "sarlinpe/fix-2024-08" }

[tool.basedpyright]
typeCheckingMode = "strict"
include = [
    "zed/**/src/**/*.py",
    "zed/**/src/**/*.pyi",
    "docker/**/src/**/*.py",
    "docker/**/src/**/*.pyi",
    "infrastructure/**/src/**/*.py",
    "infrastructure/**/src/**/*.pyi",
    "packages/**/src/**/*.py",
    "packages/**/src/**/*.pyi",
    "scripts/**/src/**/*.py",
    "scripts/**/src/**/*.pyi",
    "test/**/src/**/*.py",
    "test/**/src/**/*.pyi",
]

[tool.ruff]
target-version = "py313"
line-length = 120
preview = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false
