[project]
name = "placeframe-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
# dependencies = ["core", "httpx>=0.28.1", "placeframe_api_client"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/test"]

[project.scripts]
run = "placeframe-test.main:main"
